--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,1 @@
-bending_strain/test_2022/dis_data_all.txt
-bending_strain/test_2022/dis_fit.txt
-bending_strain/test_2022/strain.txt
+bending_strain/test_2022
